# HSM-

./: Keylogger_installer.sh  exit.sh  parse.py  run_v3.sh
Mitre_framework_structuring/: parse_html_page.sh  process_to_rust.py
pathfinder/: Cargo.toml  Pathfinder howto.docx  ex.csv
pathfinder/src/: #main.rs#  #pathfinder.rs#  main.rs  main.rs~  mitre12.rs  pathfinder.rs  pathfinder.rs~
