[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
tui = "0.19.0"
crossterm = "0.26.1"
rand = "0.8"
argh = "0.1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
unicode-segmentation = "1.2"
unicode-width = "0.1"
